src/test/ui/issues/issue-44373.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-44373.rs:4:42
   |
LL |     let _val: &'static [&'static u32] = &[&FOO];
   |                                          ^^^^^^ temporary value does not live long enough
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
